改為兩個按鈕直接登入

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -20,7 +20,7 @@
   margin: .4em 0 .67em;
 }
 
-#login form {
+#login form.loginAsAdmin{
   position: fixed;
   top: 50%;
   left: 50%;
@@ -28,6 +28,16 @@
   max-width: 16em;
   width: 90%;
 }
+
+#login form.loginAsUser{
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 16em;
+  width: 90%;
+}
+
 
 #login.recaptcha form {
   min-width: 304px;
